# edgetx

./: .clang-format  .cproject  .gitignore  .gitmodules  .gitpod.yml  .project  BUILDING.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cliff.toml  cmake.sh  docs-requirements.txt  fw.json  help.txt  hw_defs.sorted  mkdocs.yml  prepare.sh  pyproject.toml  requirements.txt
cmake/wasm/: CMakeLists.txt
companion/src/: CMakeLists.txt  CPackLinuxDeploy.cmake.in  CPackLinuxDeployQt.cmake.in  apppreferencesdialog.cpp  apppreferencesdialog.h  apppreferencesdialog.ui  burnconfigdialog.cpp  companion.cpp  companion.desktop.in  companion.qrc  comparedialog.cpp  comparedialog.h  constants.h  customdebug.cpp  customdebug.h  customizesplashdialog.cpp  customizesplashdialog.h  downloaddialog.h  filteredwritedialog.cpp  filteredwritedialog.h  filteredwritedialog.ui  flasheepromdialog.cpp  flasheepromdialog.h  flashfirmwaredialog.cpp  helpers.cpp  helpers.h  helpers_html.cpp  helpers_html.h  hwdefs.qrc.in  labels.cpp  labels.h  labels.h.autosave  logsdialog.cpp  logsdialog.h  logsdialog.ui  macros.h  mainwindow.cpp  mainwindow.h  mdichild.cpp  mdichild.h  (+34 more)
companion/src/datamodels/: CMakeLists.txt  compounditemmodels.cpp  compounditemmodels.h  filtereditemmodels.cpp  filtereditemmodels.h  itemmodeleventhandler.cpp  itemmodeleventhandler.h
companion/src/dialogs/: convmapdialog.cpp  convmapdialog.h  filesyncdialog.cpp  filesyncdialog.h
companion/src/firmwares/: CMakeLists.txt  adjustmentreference.cpp  adjustmentreference.h  afhds.cpp  afhds.h  boardfactories.cpp  boardfactories.h  boardjson.cpp  boardjson.h  boards.cpp  boards.h  boundedstring.h  curvedata.cpp  curvedata.h  curvereference.cpp  curvereference.h  customfunctiondata.cpp  customfunctiondata.h  customisation_data.cpp  customisation_data.h  datahelpers.cpp  datahelpers.h  easymode_data.h  eepromimportexport.h  eeprominterface.cpp  eeprominterface.h  flightmodedata.cpp  flightmodedata.h  generalsettings.cpp  generalsettings.h  gvardata.cpp  gvardata.h  heli_data.cpp  heli_data.h  input_data.cpp  input_data.h  logicalswitchdata.cpp  logicalswitchdata.h  mixdata.cpp  mixdata.h  (+26 more)
companion/src/flash/: CMakeLists.txt  burnconfigdialog.cpp  burnconfigdialog.h  customizesplashdialog.cpp  customizesplashdialog.h  dfu.cpp  dfu.h  flashfirmwaredialog.cpp  flashfirmwaredialog.h  flashfirmwaredialog.ui  fusesdialog.cpp  fusesdialog.h  process_copy.cpp  process_copy.h  process_flash.cpp  process_flash.h  process_sync.cpp  process_sync.h  radiointerface.cpp  radiointerface.h  radionotfound.cpp  radionotfound.h  splash.h  splashlabel.h  splashlibrarydialog.cpp  splashlibrarydialog.h  splashlibrarydialog.ui
companion/src/generaledit/: CMakeLists.txt  calibration.cpp  calibration.h  generaledit.cpp  generaledit.h  generaledit.ui  generalfavorites.cpp  generalfavorites.h  generalfavs.cpp  generalfavs.h  generalkeys.cpp  generalkeys.h  generalkeyshortcuts.cpp  generalkeyshortcuts.h  generaloptions.cpp  generaloptions.h  generalsetup.cpp  generalsetup.h  generalsetup.ui  hardware.cpp  hardware.h  timezoneedit.cpp  timezoneedit.h  trainer.cpp  trainer.h
companion/src/hw_defs/: boxer.json  commando8.json  el18.json  lr3pro.json  nv14.json  pl18.json  pocket.json  t12.json  t16.json  t18.json  t20.json  t8.json  tlite.json  tpro.json  tprov2.json  tx12.json  tx12mk2.json  tx16s.json  x10.json  x10express.json  x12s.json  x7.json  x7access.json  x9d+.json  x9d+2019.json  x9d.json  x9e.json  x9lite.json  x9lites.json  xlite.json  xlites.json  zorro.json
companion/src/images/: iconmac.icns
companion/src/modeledit/: CMakeLists.txt  channels.cpp  channels.h  checklistdialog.cpp  checklistdialog.h  checklistdialog.ui  colorcustomscreens.cpp  colorcustomscreens.h  curves.cpp  curves.h  customfunctions.cpp  customfunctions.h  easymode.cpp  easymode.h  edge.cpp  edge.h  expodialog.cpp  expodialog.h  expodialog.ui  flightmode.ui  flightmodes.cpp  flightmodes.h  gvars.cpp  gvars.h  heli.cpp  heli.h  inputs.cpp  inputs.h  logicalswitches.cpp  logicalswitches.h  logicalswitchesdelegates.cpp  logicalswitchesdelegates.h  logicalswitchestablemodel.cpp  logicalswitchestablemodel.h  mixerdialog.cpp  mixerdialog.h  mixerdialog.ui  mixerslistwidget.cpp  mixerslistwidget.h  mixes.cpp  (+24 more)
companion/src/prefsedit/: CMakeLists.txt  apppreferencesdialog.cpp  gridlayout.cpp  gridlayout.h  prefs_app.cpp  prefs_app.h  prefs_app.ui  prefs_edit.cpp  prefs_edit.h  prefs_edit.ui  prefs_general.cpp  prefs_general.h  prefs_general.ui  prefs_panel.cpp  prefs_panel.h  prefs_profile.cpp  prefs_profile.h  prefs_profile.ui  prefs_profile_2.cpp  prefs_profile_2.h  prefs_profile_2.ui  prefs_simu.cpp  prefs_simu.h  prefs_simu.ui  prefs_simu_2.cpp  prefs_simu_2.h  prefs_simu_2.ui  prefs_update.cpp  prefs_update.h  prefs_update.ui  prefsedit.cpp  prefsedit.h  prefsedit.ui
radio/src/: .gitignore  ARCHITECTURE.md  CI1302.h  CMakeLists.txt  DYNAMIC_ARRAYS_PLAN.md  FreeRTOSConfig.h  MultiProtoDefs.h  MultiSubtypeDefs.h  SpiFlashStorage.cpp  SpiFlashStorage.h  VirtualFS.cpp  VirtualFS.h  altdata.cpp  altdata.h  analogs.cpp  analogs.h  audio.cpp  audio.h  audio_with_cache.cpp  bin_allocator.cpp  bin_allocator.h  bluetooth.cpp  bluetooth.h  buzzer.cpp  buzzer.h  cfn_sort.cpp  chksize.h  cli.cpp  cli.h  cli_traces.h  crc.cpp  crc.h  crsf.cpp  crsf.h  curves.cpp  curves.h  customfn.cpp  customfn.h  dataconstants.h  datastructs.h  (+137 more)
src/: CMakeLists.txt  basenumberedit.h  bitmapbuffer.cpp  bitmapbuffer.h  bufferedwindow.h  button.cpp  button.h  button_matrix.cpp  carousel.cpp  carousel.h  checkbox.cpp  checkbox.h  choice.cpp  choice.h  choiceex.cpp  choiceex.h  coloredit.cpp  coloredit.h  dialog.cpp  dialog.h  expansion_panel.cpp  expansion_panel.h  fab_icon_button.cpp  filechoice.cpp  filechoice.h  flexlayout.h  font.h  form.cpp  form.h  gridlayout.h  keyboard_base.cpp  keyboard_base.h  keyboard_number.cpp  keyboard_number.h  keyboard_text.cpp  keyboard_text.h  layer.h  libopenui_defines.h  libopenui_depends.h  libopenui_file.cpp  (+34 more)
src/widgets/: edgetx_table.c  edgetx_table.h  field_edit.c
(+3362 files in other folders)
