[project]
name = "edgetx"
version = "3.0.0"
description = "Build-time Python dependencies for EdgeTX"
requires-python = ">=3.10"

dependencies = [
    "asciitree",
    "clang",
    "jinja2",
    "lz4",
    "pillow",
    "pydantic",
    "pyelftools",
    "typing_extensions",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mike>=2.0",
]
